kubernetes/apps/media/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    # volsync.backube/privileged-movers: "true"
